@@ -537,3 +537,4 @@ Released April 26, 2007
 3.1-005
   May  3, 2007 - backport the 3.2 mod to drawing text in Xamine so something
                  is always drawn.
+               - Fold in the jumbo buffer stuff for real.
